--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@ html, body {
   </script>
 
 <script>
-    const symbols = ['♡', '♥'];
+    const symbols = ['♡'];
   
     function createFloatingSymbol() {
       const symbol = document.createElement('span');
